# ventura_wsimod

./: README.md  pyproject.toml  requirements.txt
API/data/manchester/processed/: ManchesterFlowGaugesNodes.geojson  et0_2011_2012_day_1_km.csv  hurs_2000_2020_mon_1_km.csv  landuse.geojson  rainfall_2011_2012_day_1_km.csv  tas_2000_2020_mon_1_km.csv  tasmax_2011_2012_day_1_km.csv  tasmax_2011_2012_mon_1_km.csv  (+2 more)
API/scripts/: app.py  example_curl_call.txt  manchester_sim_wrapper_ED_ver1oct22.py  manchester_sim_wrapper_ED_verNov.py
API/wsimod/: __init__.py
API/wsimod/arcs/: __init__.py
API/wsimod/core/: __init__.py
API/wsimod/nodes/: __init__.py  groundwater.py  land.py  land_ED_Ver30aug.py  nodes.py  nodes_ED_Ver30aug.py  river.py  ruralland.py  sewer.py  sewer_ED_Ver30aug.py  wetland.py  wtw.py
API/wsimod/orchestration/: __init__.py
tests/: test_api.py  test_data.json
ventura.egg-info/: SOURCES.txt
ventura/data/ui_calls/: ui_call_20240221113522.json
ventura/scripts/: app.py  example_curl_call.txt  manchester_sim_wrapper_ED_ver1oct22.py  manchester_sim_wrapper_ED_verNov.py
ventura/ventura.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ventura/wsimod/: __init__.py
ventura/wsimod/arcs/: arcs.py
ventura/wsimod/core/: core.py
ventura/wsimod/nodes/: abstraction.py  catchment.py  compartment.py  demand.py  groundwater.py  land.py  land_ED_Ver30aug.py  nodes.py  nodes_ED_Ver30aug.py  river.py  ruralland.py  sewer.py  sewer_ED_Ver30aug.py  storage.py  waste.py  wetland.py  wtw.py  wtw_ED_Ver30aug.py
ventura/wsimod/orchestration/: models.py
(+19 files in other folders)
