[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wsimod"
version = "0.1.0"
description = "WSIMOD (old)"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["ventura", "wsimod"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = ["Fiona",
                "Flask",
                "geopandas",
                "numpy",
                "pandas",
                "pyproj",
                "Shapely",
                "tqdm",
                ]


[tool.setuptools.packages.find]
where = ["API"]
include = ["wsimod.*"]