[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ventura"
version = "0.1.0"
description = "Ventura + WSIMOD (old)"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["ventura", "wsimod"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = ["Fiona",
                "Flask",
                "flask_cors",
                "geopandas",
                "numpy",
                "pandas",
                "pyproj",
                "pytest",
                "Shapely",
                "tqdm",
                ]
